# SDL_Games

./: .gitignore  CMakeLists.txt
Pong/: CMakeLists.txt  Game.cpp  Game.h
Ship/: Actor.h  CMakeLists.txt  Common.h  Component.h  Game.cpp  Game.h  main.cpp
